# nfcpy-biolinq

./: README.rst  pyproject.toml  requirements-biolinq-fork.txt
src/nfc/: __init__.py
src/nfc/clf/: rcs380.py
